--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,10 @@
-ecdsa==0.18.0
-base58==2.1.1
-hashlib
-typing
-leveldb-py>=0.2.0
-# File: requirements.txt
-
-# Core dependencies
+# Core Dependencies
+cryptography>=3.4
+fastapi>=0.68.1
+uvicorn>=0.15.0
+web3>=5.24.0
+eth-account>=0.5.6
+pydantic>=1.8.2
 aiohttp>=3.8.0
 async-timeout>=4.0.0
 miniupnpc>=2.0.2
@@ -13,24 +12,28 @@ websockets>=10.0
 pyyaml>=6.0
 prometheus-client>=0.16.0
 psutil>=5.9.0
+ecdsa==0.18.0
+base58==2.1.1
+leveldb-py>=0.2.0
 
-# Testing dependencies
-pytest>=7.0.0
+# Development Dependencies
+pytest>=7.0
 pytest-asyncio>=0.18.0
 pytest-mock>=3.10.0
-
-# Security dependencies
-ecdsa>=0.18.0
-cryptography>=39.0.0
-
-# Development dependencies
+pytest-cov>=4.1
+black>=23.0
+isort>=5.12
+flake8>=6.0
+mypy>=1.0
 pylint>=2.17.0
-black>=23.3.0
-mypy>=1.3.0
+# Core Dependencies
+date-fns
+react
+react-dom
+react-router-dom
+date-fns
+react-router-dom
 
-fastapi==0.68.1
-uvicorn==0.15.0
-web3==5.24.0
-eth-account==0.5.6
-cryptography==3.4.8
-pydantic==1.8.2
+# Peer Dependencies (required but not directly listed)
+react
+react-dom
